# AoC

2023/day5/: main.py
2024/: day1.py
2024/day1/: day1.py
2024/day2/: main.py
2024/day3/: main.py
2025/: pyproject.toml
2025/day1/: main.py
2025/day2/: main.py
2025/day3/: main.py
2025/day4/: main.py
2025/day5/: main.py
2025/day6/: main.py
2025/day7/: main.py
2025/day8/: main.py
