[project]
name = "2025"
version = "0.1.0"
description = ""
authors = [
    {name = "andslot",email = "slotkristensen@live.dk"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
